--- a/index.html
+++ b/index.html
@@ -21,6 +21,98 @@
   </head>
   <body>
     <main>
+      <nav>
+        <img src="./images/logo.svg" alt="logo" class="logo" />
+        <ul>
+          <li><a href="#">Features</a></li>
+          <li><a href="#">Team</a></li>
+          <li><a href="#">Sign In</a></li>
+        </ul>
+      </nav>
+      <section>
+        <div class="maincontent">
+          <img
+            src="./images/illustration-intro.png"
+            alt="content img"
+            class="bgImage"
+          />
+          <div class="getStarted">
+            <h1 class="title">
+              All your files in one secure location, accessible anywhere.
+            </h1>
+            <p class="title-info">
+              Fylo stores all your most important files in one secure location.
+              Access them wherever you need, share and collaborate with friends
+              family, and co-workers.
+            </p>
+            <button type="button" class="start-btn">Get Started</button>
+          </div>
+        </div>
+      </section>
+      <section class="featuresFrame">
+        <div class="features">
+          <div class="features-content">
+            <img src="./images/icon-access-anywhere.svg" alt="accessfile" />
+            <h2 class="sub-title">Access your files anywhere</h2>
+            <p>
+              The ability to use a smartphone, tablet, or computer to access
+              your account means your files follow you everywhere.
+            </p>
+          </div>
+          <div class="features-content">
+            <img src="./images/icon-security.svg" alt="accessfile" />
+            <h2 class="sub-title">Security you can trust</h2>
+            <p>
+              2-factor authentication and user-controlled encryption are just a
+              couple of the security features we allow to help secure your
+              files.
+            </p>
+          </div>
+          <div class="features-content">
+            <img src="./images/icon-collaboration.svg" alt="accessfile" />
+            <h2 class="sub-title">Real-time collaboration</h2>
+            <p>
+              Securely share files and folders with friends, family and
+              colleagues for live collaboration. No email attachments required.
+            </p>
+          </div>
+          <div class="features-content">
+            <img src="./images/icon-any-file.svg" alt="accessfile" />
+            <h2 class="sub-title">Store any type of file</h2>
+            <p>
+              Whether you're sharing holidays photos or work documents, Fylo has
+              you covered allowing for all file types to be securely stored and
+              shared.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="row">
+          <div class="col1">
+            <img
+              src="./images/illustration-stay-productive.png"
+              alt="productive"
+              class="productiveImg"
+            />
+          </div>
+          <div class="col1">
+            <h2>Stay productive, wherever you are</h2>
+            <p>
+              Never let location be an issue when accessing your files. Fylo has
+              you covered for all of your file storage needs.
+            </p>
+            <p>
+              Securely share files and folders with friends, family and
+              colleagues for live collaboration. No email attachments required.
+            </p>
+            <a href="#"
+              >See how Fylo works <img src="./images/icon-arrow.svg" alt=""
+            /></a>
+          </div>
+        </div>
+      </section>
+
       <footer>
         <p class="attribution">
           Challenge by
@@ -30,29 +122,14 @@
         </p>
       </footer>
     </main>
-    Features Team Sign In All your files in one secure location, accessible
-    anywhere. Fylo stores all your most important files in one secure location.
-    Access them wherever you need, share and collaborate with friends family,
-    and co-workers. Get Started Access your files, anywhere The ability to use a
-    smartphone, tablet, or computer to access your account means your files
-    follow you everywhere. Security you can trust 2-factor authentication and
-    user-controlled encryption are just a couple of the security features we
-    allow to help secure your files. Real-time collaboration Securely share
-    files and folders with friends, family and colleagues for live
-    collaboration. No email attachments required. Store any type of file Whether
-    you're sharing holidays photos or work documents, Fylo has you covered
-    allowing for all file types to be securely stored and shared. Stay
-    productive, wherever you are Never let location be an issue when accessing
-    your files. Fylo has you covered for all of your file storage needs.
-    Securely share files and folders with friends, family and colleagues for
-    live collaboration. No email attachments required. See how Fylo works Fylo
+
+    Fylo has improved our team productivity by an order of magnitude. Since
+    making the switch our team has become a well-oiled collaboration machine.
+    Satish Patel Founder & CEO, Huddle Fylo has improved our team productivity
+    by an order of magnitude. Since making the switch our team has become a
+    well-oiled collaboration machine. Bruce McKenzie Founder & CEO, Huddle Fylo
     has improved our team productivity by an order of magnitude. Since making
-    the switch our team has become a well-oiled collaboration machine. Satish
-    Patel Founder & CEO, Huddle Fylo has improved our team productivity by an
-    order of magnitude. Since making the switch our team has become a well-oiled
-    collaboration machine. Bruce McKenzie Founder & CEO, Huddle Fylo has
-    improved our team productivity by an order of magnitude. Since making the
-    switch our team has become a well-oiled collaboration machine. Iva Boyd
+    the switch our team has become a well-oiled collaboration machine. Iva Boyd
     Founder & CEO, Huddle Get early access today It only takes a minute to sign
     up and our free starter tier is extremely generous. If you have any
     questions, our support team would be happy to help you. Get Started For Free
