--- a/index.html
+++ b/index.html
@@ -112,6 +112,65 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="testimonials">
+          <img src="images/bg-quotes.png" alt="quote" class="quoteImg" />
+          <div class="test1">
+            <p class="test1Text">
+              Fylo has improved our team productivity by an order of magnitude.
+              Since making the switch our team has become a well-oiled
+              collaboration machine.
+            </p>
+            <div class="userInfo">
+              <img
+                src="./images/profile-1.jpg"
+                alt="userPic"
+                class="profileImg"
+              />
+              <div>
+                <h3>Satish Patel</h3>
+                <p>Founder & CEO, Huddle</p>
+              </div>
+            </div>
+          </div>
+          <div class="test1">
+            <p class="test1Text">
+              Fylo has improved our team productivity by an order of magnitude.
+              Since making the switch our team has become a well-oiled
+              collaboration machine.
+            </p>
+            <div class="userInfo">
+              <img
+                src="./images/profile-2.jpg"
+                alt="userPic"
+                class="profileImg"
+              />
+              <div>
+                <h3>Bruce McKenzie</h3>
+                <p>Founder & CEO, Huddle</p>
+              </div>
+            </div>
+          </div>
+          <div class="test1">
+            <p class="test1Text">
+              Fylo has improved our team productivity by an order of magnitude.
+              Since making the switch our team has become a well-oiled
+              collaboration machine.
+            </p>
+            <div class="userInfo">
+              <img
+                src="./images/profile-3.jpg"
+                alt="userPic"
+                class="profileImg"
+              />
+              <div>
+                <h3>Iva Boyd</h3>
+                <p>Founder & CEO, Huddle</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <footer>
         <p class="attribution">
@@ -123,19 +182,12 @@
       </footer>
     </main>
 
-    Fylo has improved our team productivity by an order of magnitude. Since
-    making the switch our team has become a well-oiled collaboration machine.
-    Satish Patel Founder & CEO, Huddle Fylo has improved our team productivity
-    by an order of magnitude. Since making the switch our team has become a
-    well-oiled collaboration machine. Bruce McKenzie Founder & CEO, Huddle Fylo
-    has improved our team productivity by an order of magnitude. Since making
-    the switch our team has become a well-oiled collaboration machine. Iva Boyd
-    Founder & CEO, Huddle Get early access today It only takes a minute to sign
-    up and our free starter tier is extremely generous. If you have any
-    questions, our support team would be happy to help you. Get Started For Free
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua +1-543-123-4567
-    example@fylo.com About Us Jobs Press Blog Contact Us Terms Privacy
+    Get early access today It only takes a minute to sign up and our free
+    starter tier is extremely generous. If you have any questions, our support
+    team would be happy to help you. Get Started For Free Lorem ipsum dolor sit
+    amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+    labore et dolore magna aliqua +1-543-123-4567 example@fylo.com About Us Jobs
+    Press Blog Contact Us Terms Privacy
 
     <script src="script.js"></script>
   </body>
